Started work on MP2.2 WARNING:scene.cpp does NOT complie as of yet!

--- a/mp2/Makefile
+++ b/mp2/Makefile
@@ -1,9 +1,18 @@
 FLAGS = -g -O0 -Wall
 
-all: testimage
+all: testimage testscene
 
-testimage: testimage.o rgbapixel.o png.o image.o
-	g++ $(FlAGS) testimage.o png.o rgbapixel.o image.o -lpng -o testimage
+testimage: testimage.o image.o png.o rgbapixel.o
+	g++ $(FlAGS) testimage.o image.o png.o rgbapixel.o -lpng -o testimage
+
+testscene: testscene.o image.o scene.o png.o rgbapixel.o
+	g++ $(FLAGS) testscene.o image.o scene.o png.o rgbapixel.o -lpng -o testscene
+
+testscene.o: testscene.cpp
+	g++ $(FLAGS) -c testscene.cpp
+
+scene.o: scene.cpp
+	g++ $(FLAGS) -c scene.cpp
 
 testimage.o: testimage.cpp
 	g++ $(FlAGS) -c testimage.cpp
@@ -11,12 +20,12 @@ testimage.o: testimage.cpp
 rgbapixel.o: rgbapixel.cpp
 	g++ $(FlAGS) -c rgbapixel.cpp
 
-png.o: png.cpp
-	g++ $(FlAGS) -c png.cpp -lpng
+png.o: png.cpp rgbapixel.cpp
+	g++ $(FlAGS) -c png.cpp rgbapixel.cpp -lpng
 
-image.o: image.cpp
-	g++ $(FlAGS) -c image.cpp
+image.o: image.cpp png.cpp
+	g++ $(FlAGS) -c image.cpp png.cpp
 
 clean:
-	rm -*o testimage
+	rm *o testimage
 
